<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">予約管理</string>

    <!-- 【店】ログイン画面 -->
    <string name="tv_login_title">ログイン</string>
    <string name="tv_login_id">MailAddress</string>
    <string name="tv_login_pass">Password</string>
    <string name="tv_login_new_account"><u>アカウントを作成</u></string>

    <!-- 店情報 -->
    <string name="tv_shop_id">店舗ID</string>
    <string name="tv_shop_name">店舗名</string>
    <string name="tv_phonetic">店舗名（カナ）</string>
    <string name="tv_open_time">営業時間</string>
    <string name="tv_tel">電話番号</string>
    <string name="tv_address">住所</string>
    <string name="tv_average_budget">平均予算</string>
    <string name="tv_point_latitude">緯度</string>
    <string name="tv_point_longitude">経度</string>
    <string name="tv_lunch_service">ランチ営業</string>
    <string name="rb_lunch_service_available">有</string>
    <string name="rb_lunch_service_not_available">無</string>
    <string name="tv_non_smoking_seat">禁煙席</string>
    <string name="rb_non_smoking_seat_available">有</string>
    <string name="rb_non_smoking_seat_not_available">無</string>
    <string name="tv_card_usage">カード利用</string>
    <string name="rb_card_usage_available">有</string>
    <string name="rb_card_usage_not_available">無</string>
    <string name="tv_image_1">店舗画像01</string>
    <string name="tv_image_2">店舗画像02</string>
    <string name="tv_password">パスワード</string>

    <!-- フリーワードテーブル -->
    <string name="tv_no">項番</string>
    <string name="tv_free_name">フリーワード</string>

    <string name="tv_new_register">新規登録画面</string>
    <string name="tv_confirm">確認画面</string>
    <string name="bt_confirm">確認</string>
    <string name="bt_send">送信</string>
    <string name="bt_back">戻る</string>

    <!--FullDialogFragment-->
    <string name="signout_dialog_title">ログアウト</string>
    <string name="signout_dialog_message">ログアウトしますか?"</string>
    <string name="signout_dialog_possitive">Yes</string>
    <string name="signout_dialog_negative">No</string>

    <!--MainActivity-->
    <string name="main_was_not_registered_warning">登録された、IDとパスワードを入力してください。</string>
    <string name="main_incorrect_id_or_password">IDか、パスワードを間違えています。</string>
    <string name="main_welcome_message">ようこそ、</string>
    <string name="honor_title">様</string>

    <!--ReservationDetailActivity-->
    <string name="dialog_message">よろしいですか?</string>
    <string name="dialog_possitive">はい</string>
    <string name="dialog_negative">いいえ</string>
    <string name="visit_successful">来店処理が完了しました。</string>
    <string name="visit_failure">処理失敗</string>
    <string name="year_title">年</string>
    <string name="month_title">月</string>
    <string name="date_title">日</string>
    <string name="hour_title">時</string>
    <string name="minute_title">分</string>
    <string name="tv_female_name_title">予約者:</string>
    <string name="tv_male_name_title">来店者:</string>
    <string name="tv_menu_title">メニュー:</string>
    <string name="tv_use_date_time_title">予約時刻:</string>
    <string name="bt_visited">来店</string>

    <!--ReservationListActivity-->
    <string name="did_not_get_info_warning">情報の取得に失敗</string>

    <!--ShopRegisterActivity-->
    <string name="register_info_possitive">有</string>
    <string name="register_info_negative">無</string>
    <string name="info_shop_name_title">店舗名</string>
    <string name="info_shop_phonetic_title">店舗名（カナ）</string>
    <string name="info_open_time_title">営業時間</string>
    <string name="info_tel_title">電話番号</string>
    <string name="info_address_title">住所</string>
    <string name="info_average_budget_title">平均予算</string>
    <string name="password_title">パスワード</string>
    <string name="info_number_title">項番</string>
    <string name="info_free_name_title">フリーワード</string>
    <string name="register_missing_info_warning">を入力してください。</string>

    <!--ShopRegisterConfirmActivity-->
    <string name="register_successful_message">登録が完了しました。</string>
    <string name="register_failure_warning">登録に失敗しました。</string>
</resources>
